# alaye-app

./: .editorconfig  .env.example  .flake8  .gitignore  LICENSE  README.md  README_zh.md  alembic.ini  claude-project-config-guide.md  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 13fd364f59da_.py
alembic_migrations/: env.py
alembic_migrations/versions/: 04833bf282ac_.py  13fd364f59da_.py  3dca7f30d925_.py
frontend/: .gitignore  .prettierignore  .prettierrc  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/api/: api.ts  event_bus.ts  types.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useWindowSize.ts
frontend/lib/: env.ts  file.ts  i18n.ts  log.ts  monaco-preloader.ts  utils.ts
frontend/scripts/: copyMonacoToPublic.js  syncEnv.js
scripts/: FORMAT_README.md  README.md  build.bat  build.ps1  build.sh  create-dmg-background.sh  create_alembic_zip.py  create_zip.py  dmg-config.json  format-all.bat  format-all.sh  format-frontend.bat  format-frontend.sh  format-python.bat  format-python.sh  macos_app_launcher.sh
scripts/local_ops/: export_session_contents.py  verify_session_message_merging.py  verify_session_title_extraction.py
src/api/: api.py  api_models.py  async_executor.py  auto_register.py  event_bus_listener_adapter.py  fastapi_adapter.py  fastapi_event_bus.py  webview_adapter.py  webview_event_bus.py
src/claude/: __init__.py  claude_config_manager.py  claude_hooks_operations.py  claude_lsp_operations.py  claude_markdown_operations.py  claude_mcp_operations.py  claude_plugin_operations.py  claude_projects_scanner.py  claude_session_operations.py  (+4 more)
tests/: __init__.py  conftest.py
(+172 files in other folders)
